Sort by Last Update is default now, and filter bug fixes

--- a/code/dev/parts/keys/list.html
+++ b/code/dev/parts/keys/list.html
@@ -55,19 +55,19 @@
                 <tr>
                   <th>
                     <a href="" ng-click="order('key_name')">Name</a>
-                    <span class="sortorder" ng-show="filter.predicate === 'key_name'" ng-class="{reverse: filter.key_name}"></span>
+                    <span class="sortorder" ng-show="filter.predicate === 'key_name'" ng-class="{reverse: filter.reverse}"></span>
                   </th>
                   <th>
                     <a href="" ng-click="order('key')">API Key</a>
-                    <span class="sortorder" ng-show="filter.predicate === 'key'" ng-class="{reverse: filter.key}"></span>
+                    <span class="sortorder" ng-show="filter.predicate === 'key'" ng-class="{reverse: filter.reverse}"></span>
                   </th>
                   <th>
                     <a href="" ng-click="order('active')">Active</a>
-                    <span class="sortorder" ng-show="filter.predicate === 'active'" ng-class="{reverse: filter.active}"></span>
+                    <span class="sortorder" ng-show="filter.predicate === 'active'" ng-class="{reverse: filter.reverse}"></span>
                   </th>
                   <th>
                     <a href="" ng-click="order('updated_at')">Last Update</a>
-                    <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.updated_at}"></span>
+                    <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
                   </th>
                   <!--<th class="thin">-->
                   <!--<a href="" ng-click="order('read_only_status')">Read Only</a>-->
