--- a/code/dev/parts/dns_zones/list.html
+++ b/code/dev/parts/dns_zones/list.html
@@ -40,7 +40,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="pull-left">
-                <a ui-sref="{{isReadOnly() ?'.': '.new'}}" class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="_loading || isReadOnly()">
+                <a ui-sref="{{(isReadOnly() || auth.getPermissionStatus('dns_zones') === 2) ?'.': '.new'}}" class="btn btn-success" ng-class="{'btn-disabled':(isReadOnly() || auth.getPermissionStatus('dns_zones') === 2)}" ng-disabled="_loading || (isReadOnly() || auth.getPermissionStatus('dns_zones') === 2)">
                   <i class="glyphicon glyphicon-plus"></i>&nbsp; Add New DNS Zone
                 </a>
               </div>
