Security analytics filter for dashboard widget fixed

--- a/code/dev/parts/dashboard/widgets/security-analytics/edit-config-security-analytics-waf.tpl.html
+++ b/code/dev/parts/dashboard/widgets/security-analytics/edit-config-security-analytics-waf.tpl.html
@@ -1,7 +1,7 @@
 <div role="form" class="edit-web-analytics-config">
   <div class="form-group">
     <label for="domain">Domain</label>
-    <div domain-select id="domain" ng-model="domain" on-select="onDomainSelected()" select-one="true"></div>
+    <div domain-select data-type="security_analytics" id="domain" ng-model="domain" on-select="onDomainSelected()" select-one="true"></div>
   </div>
   <div class="form-group">
     <label for="domain">Filters</label>
