Removed error displaying

--- a/code/dev/parts/invitation/createPassword.html
+++ b/code/dev/parts/invitation/createPassword.html
@@ -21,7 +21,7 @@
                   <div ng-message="minlength" class="alert-text alert-text--minlength">Password must contain at least 8 characters</div>
                   <div ng-message="maxlength" class="alert-text alert-text--maxlength">Password must contain 15 characters max</div>
                 </div>
-            </div>{{loginForm.passAgain.$error}}
+            </div>
             <div class="form-group" ng-class="{'has-error': loginForm.passAgain.$invalid && loginForm.passAgain.$dirty}">
               <input type="password" name="passAgain" placeholder="Repeat Password" class="form-control input-lg" ng-disabled="_loading"
                 ng-model="passAgain" validate-compare-to="pass" ng-minlength="8" ng-maxlength="15" required>
