--- a/code/dev/parts/companies/list.html
+++ b/code/dev/parts/companies/list.html
@@ -94,8 +94,8 @@
                 </th>
                 <th class="actions col-sm-1 col-lg-1 text-left">Actions</th>
                 <th class="col-sm-1 col-lg-1" ng-if="auth.isRevadmin() || auth.isReseller()">
-                  <a href="" ng-click="order('parent_account_id')">Parent Account</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'parent_account_id'" ng-class="{reverse: filter.reverse}"></span>
+                  <a href="" ng-click="order('parentAccount.companyName')">Parent Account</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'parentAccount.companyName'" ng-class="{reverse: filter.reverse}"></span>
                 </th>
                 <th class="col-sm-1 col-lg-1" ng-if="auth.isRevadmin()">
                   <a href="" ng-click="order('vendor_profile')">Vendor</a>
@@ -142,7 +142,7 @@
                 </td>
                 <td ng-if="auth.isRevadmin() || auth.isReseller()">
                     <a ui-sref=".edit({id: item.parentAccount.id})" ng-if="!item.loading" uib-tooltip="Edit Parent Account">
-                        {{item.parentAccount.companyName}}
+                        {{item.parentAccountName}}
                       </a>                  
                 </td>
                 <td ng-if="auth.isRevadmin()">
