--- a/code/dev/parts/profile/edit-company.html
+++ b/code/dev/parts/profile/edit-company.html
@@ -116,7 +116,7 @@
                 </div>
               </div>
             </div>
-            <div class="form-group" ng-if="auth.isRevadmin() && model.parent_account_id">
+            <div class="form-group" ng-if="auth.isRevadmin()">
                 <label for="company" class="col-sm-2 control-label">Parent Company </label>
                 <div class="col-sm-10">
                   <span ng-show="!_loading && companies.length==0" class="loader--waite-company"><i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
