--- a/code/dev/parts/profile/edit-company.html
+++ b/code/dev/parts/profile/edit-company.html
@@ -122,7 +122,7 @@
                   <span ng-show="!_loading && companies.length==0" class="loader--waite-company"><i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
                   <ui-select ng-if="!_loading && companies.length>0" ng-animate-disabled theme="select2" ng-disabled="_loading" ng-model="model.parent_account_id" id="company" name="accountId">
                     <ui-select-match placeholder="Select Account">{{$select.selected.companyName}}</ui-select-match>
-                    <ui-select-choices repeat="item.id as  item in companies | filter: {companyName: $select.search}">
+                    <ui-select-choices repeat="item.id as  item in parentCompanies | filter: {companyName: $select.search}">
                       <div ng-bind-html="item.companyName|highlight: $select.search"></div>
                     </ui-select-choices>
                   </ui-select>
