Fixed account resources page

--- a/code/dev/parts/companies/account-resources.html
+++ b/code/dev/parts/companies/account-resources.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h2 class="pull-left page-title">
-        All Account Resources <span ng-bind-html="getListTitle()"></span>
+        All Account Resources {{getListTitle()}}
       </h2>
     </div>
   </div>
