--- a/code/dev/parts/users/new.html
+++ b/code/dev/parts/users/new.html
@@ -76,7 +76,7 @@
             <div class="col-sm-10">
               <!-- For "admin" and "user" select only one account-->
               <span ng-show="!_loading && companies.length==0" class="loader--waite-company"><i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
-              <ui-select ng-if="!_loading && companies.length>0" ng-animate-disabled theme="select2" ng-disabled="_loading" ng-model="model.companyId[0]" id="company" name="accountId" on-select="onOneAccountSelect($model)">
+              <ui-select ng-if="!_loading && companies.length>0" ng-animate-disabled theme="select2" ng-disabled="_loading" ng-model="model.account_id" id="company" name="accountId" on-select="onOneAccountSelect($model)">
                 <ui-select-match placeholder="Select Account">{{$select.selected.companyName}}</ui-select-match>
                 <ui-select-choices repeat="item.id as  item in companies | filter: {companyName: $select.search}">
                   <div ng-bind-html="item.companyName|highlight: $select.search"></div>
@@ -122,7 +122,7 @@
                 ng-disabled="_loading" style="min-width: 550px;" id="managed_account_ids" name="managedAccountIds" ng-if="!_loading && companies.length>0"
                 on-select="onOneManageAccountSelect($model)">
                 <ui-select-match placeholder="Add account to manage ...">{{$item.companyName}}</ui-select-match>
-                <ui-select-choices repeat="item as item in getCompaniesManageList()| filter: {companyName: $select.search, id:'!'+ model.companyId[0]}">
+                <ui-select-choices repeat="item as item in getCompaniesManageList()| filter: {companyName: $select.search, id:'!'+ model.account_id}">
                   <div ng-bind-html="item.companyName|highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
