--- a/code/dev/parts/shared/permissions/permissions.html
+++ b/code/dev/parts/shared/permissions/permissions.html
@@ -1,5 +1,5 @@
 <div class="form-group permissions">
-    <label for="access_control_list" class="col-sm-2 control-label">Permissions
+    <label for="permissions" class="col-sm-2 control-label">Permissions
         <span ng-if="readOnly">(Inherited From Group)</span>
     </label>
     <div class="col-sm-10" ng-show="!model || !apps || !domains || !dnsZones || !companies">
