--- a/code/dev/parts/groups/edit.html
+++ b/code/dev/parts/groups/edit.html
@@ -60,7 +60,7 @@
             <div class="col-sm-10">
               <span ng-if="!users || user.count === 0">None</span>
               <span ng-repeat="user in users.users">
-                <a ng-if="user.key_name" ui-sref="index.accountSettings.keys.edit({id: user.id})" uib-tooltip="Edit API Key">
+                <a ng-if="user.key_name" ui-sref="index.accountSettings.keys.edit({id: user._id})" uib-tooltip="Edit API Key">
                   {{user.key_name}}
                 </a>
                 <a ng-if="user.email" ui-sref="index.accountSettings.users.edit({id: user.user_id})" uib-tooltip="Edit User">
