Added new content type cache bar chart to edge cache portal section

--- a/code/dev/parts/reports/edge-cache.html
+++ b/code/dev/parts/reports/edge-cache.html
@@ -158,6 +158,18 @@
               </div>
             </div>
           </div>
+
+          <div class="row report_edge_cache_line_chart__view_container">
+            <div class="row">
+              <div class="col-sm-12 col-md-12">
+                <div class="col-lg-12 _nd-block">
+                  <div style="min-width: 480px; min-height: 350px" ctype-cache-chart ng-domain="vm.domain" filters-sets="vm.filtersExternal"
+                    hide-filters="true">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
