--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -382,6 +382,7 @@
   <script type="text/javascript" src="js/portal/reports/chart/d3PieChart.directive.js"></script>
   <script type="text/javascript" src="js/portal/reports/chart/requestsChart.directive.js"></script>
   <script type="text/javascript" src="js/portal/reports/chart/hitsCacheChart.directive.js"></script>
+  <script type="text/javascript" src="js/portal/reports/chart/ctypeCacheChart.directive.js"></script>
   <script type="text/javascript" src="js/portal/reports/chart/hitsSecondaryCacheChart.directive.js"></script>
   <script type="text/javascript" src="js/portal/reports/chart/httpStatusCodeChart.directive.js"></script>
   <script type="text/javascript" src="js/portal/reports/chart/httpHttpsChart.directive.js"></script>
