--- a/code/dev/parts/reports/edge-cache.html
+++ b/code/dev/parts/reports/edge-cache.html
@@ -7,7 +7,7 @@
   <div class="row">
     <div class="col-md-12">
       <div class="panel panel-default">
-        <div class="panel-heading">
+        <div class="panel-heading domain-selection">
           <div class="row">
             <div class="col-md-12">
               <div class="pull-left">
