--- a/code/dev/parts/profile/statements.html
+++ b/code/dev/parts/profile/statements.html
@@ -80,6 +80,7 @@
                            dt-options="transactionsDtOptions"
                            dt-instance="dtInstanceTransactions"
                            class="table order-column table-striped"
+                           dt-column-defs="dtColumnDefs"
                            ng-if="!_loading && !_error">
                         <thead>
 
@@ -125,7 +126,7 @@
                     <div class="alert alert-danger" ng-if="!_loading && _error">
                         {{_error.message}}
                     </div>
-                    <table datatable="ng" dt-options="statementsDtOptions" class="table order-column table-striped" ng-if="!_loading && !_error">
+                    <table datatable="ng" dt-options="statementsDtOptions" dt-column-defs="dtColumnDefs" class="table order-column table-striped" ng-if="!_loading && !_error">
                         <thead>
 
                         <tr>
