Transaction title change

--- a/code/dev/parts/profile/statements.html
+++ b/code/dev/parts/profile/statements.html
@@ -63,7 +63,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="pull-left">
-                                <h2>Transactions</h2>
+                                <h2>Transactions <small>(Last 200 Records)</small></h2>
                             </div>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="pull-left">
-                                <h2>Statements</h2>
+                                <h2>Statements <small>(Last 200 Records)</small></h2>
                             </div>
                         </div>
                     </div>
