--- a/code/dev/parts/reports/usage-web.html
+++ b/code/dev/parts/reports/usage-web.html
@@ -69,7 +69,7 @@
               <div class="pull-right">
                   <button class="btn btn-primary" ng-click="exportCSV()" ng-disabled="_loading || !selected.val || !report">
                       <i class="glyphicon glyphicon-export"></i>&nbsp;
-                      Export CSV
+                      Download CSV
                     </button>     
               </div>
 
