--- a/code/dev/parts/reports/usage-web.html
+++ b/code/dev/parts/reports/usage-web.html
@@ -54,8 +54,9 @@
                       Update Report
                     </button>
                   </div>
+                  <br />
                   <div class="form-group" ng-if="auth.isRevadmin()">
-                    <input class="form-control" type="checkbox" ng-click="aggReports()" /> 
+                    <input class="form-control no-margin" type="checkbox" ng-click="aggReports()" /> 
                     Aggregated Report For Reseller Accounts
                   </div>
 
