Added smart bytes text to IE in usage report

--- a/code/dev/parts/reports/usage-web.html
+++ b/code/dev/parts/reports/usage-web.html
@@ -322,7 +322,7 @@
                 </div>
 
                 <div class="form-group">
-                  <label class="col-sm-6 control-label" >Optimized Traffic</label>
+                  <label class="col-sm-6 control-label" >Optimized Traffic (Smart Bytes)</label>
                   <div class="col-sm-6">
                     <div class="form-control text-right">
                       {{ bytesToGB(report.image_engine ? report.image_engine.optimized_image_size_bytes: 0) }}
@@ -474,7 +474,7 @@
                                 </div>
                 
                                 <div class="form-group">
-                                  <label class="col-sm-6 control-label" >Optimized Traffic</label>
+                                  <label class="col-sm-6 control-label" >Optimized Traffic<br />(Smart Bytes)</label>
                                   <div class="col-sm-6">
                                     <div class="form-control text-right">
                                       {{ bytesToGB(usage.image_engine ? usage.image_engine.optimized_image_size_bytes: 0) }}
