Added traffic alerts UI components

--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -192,9 +192,9 @@
         <!-- <a ui-sref-active="active" ui-sref="index.accountSettings.notificationsList" class="side-menu-sub-item" id="side-menu-sub-item__notifications-list" ng-if="userService.isRevadmin()">
             <i class="sub-menu-icon fa fa-server "></i>  Notification Lists
           </a> -->
-        <!-- <a ui-sref-active="active" ui-sref="index.accountSettings.trafficAlerts" class="side-menu-sub-item" id="side-menu-sub-item__traffic-alerts-list" ng-if="userService.isRevadmin()">
+        <a ui-sref-active="active" ui-sref="index.accountSettings.trafficAlerts" class="side-menu-sub-item" id="side-menu-sub-item__traffic-alerts-list" ng-if="userService.isRevadmin()">
             <i class="sub-menu-icon fa fa-server "></i>  Trafic Alerts
-          </a> -->
+          </a>
         <a ui-sref-active="active" ui-sref="index.accountSettings.cdn-ip-blocks" class="side-menu-sub-item" id="side-menu-sub-item__cdn-ip-bloks">
             <i class="sub-menu-icon fa fa-server "></i>  CDN IP Blocks
           </a>
