--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -247,6 +247,7 @@
   <script type="text/javascript" src="js/portal/resources/model/waf_rules.factory.js"></script>
   <script type="text/javascript" src="js/portal/resources/model/invitation.factory.js"></script>
   <script type="text/javascript" src="js/portal/resources/model/groups.factory.js"></script>
+  <script type="text/javascript" src="js/portal/resources/model/trafficAlerts.factory.js"></script>
 
   <script type="text/javascript" src="js/portal/shared/permissions/permissions.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/permissions/permissions.controller.js"></script>
@@ -581,6 +582,15 @@
   <script type="text/javascript" src="js/portal/notifications/account-notification-lists/accountNotificationLists.directive.js"></script>
   <script type="text/javascript" src="js/portal/notifications/notification-list/notificationList.directive.js"></script>
   <!-- // Notification Lists -->
+
+    <!-- Traffic Alerts -->
+    <script type="text/javascript" src="js/portal/trafficAlerts/trafficAlerts.module.js"></script>
+    <script type="text/javascript" src="js/portal/trafficAlerts/trafficAlerts.routes.js"></script>
+    <script type="text/javascript" src="js/portal/trafficAlerts/controller/trafficAlerts.controller.js"></script>
+    <script type="text/javascript" src="js/portal/trafficAlerts/directives/alertRuleTypeConfigs.controller.js"></script>
+    <script type="text/javascript" src="js/portal/trafficAlerts/directives/alertRuleTypeConfigs.directive.js"></script>
+    <!-- // Traffic Alerts -->
+
   <!-- Invitation  -->
   <script type="text/javascript" src="js/portal/invitation/invitation.module.js"></script>
   <script type="text/javascript" src="js/portal/invitation/invitation.routes.js"></script>
